event-ticket/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-ticket-service
spec:
  selector:
    app: event-ticket-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
